@@ -1,7 +1,7 @@
-/* $Id: views.css,v 1.11.4.1 2009-12-24 00:37:08 merlinofchaos Exp $ */
+/* $Id: views.css,v 1.11.4.2 2010-03-12 00:25:37 merlinofchaos Exp $ */
 .views-exposed-form .views-exposed-widget {
-  float: left;
-  padding: .5em 1em 0 0;
+  float: left; /* LTR */
+  padding: .5em 1em 0 0; /* LTR */
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
